--- a/src/app/translation/translations/de.json
+++ b/src/app/translation/translations/de.json
@@ -885,7 +885,8 @@
       "general": "ALLGEMEINES",
       "images": "IMAGES",
       "schedule": "PRODUKTZYKLEN",
-      "campaign": "Kampagnen"
+      "campaign": "Kampagnen",
+      "merchantgroupassociation": "MERCHANT GROUP ASSOCIATIONS"
     },
     "info": {
       "title": "Produktangaben",
@@ -947,6 +948,22 @@
       "schedulednum": "Geplannte",
       "view": "Kampagne ansehen",
       "nodata": "Keine Kampagnen gefunden."
+    },
+    "merchantgroupassociation": {
+      "title": "Merchant Group Associations",
+      "id": "ID",
+      "merchantgroup": "Merchant Group",
+      "campaign": "Campaign",
+      "add": "Add new Association",
+      "remove": "Remove Association",
+      "nodata": "No Merchant Provider Group Associations found.",
+      "dialog": {
+        "title": "Select Campaign and Merchant Provider Group",
+        "group": "Merchant Provider Group",
+        "campaign": "Campaign",
+        "add": "Add",
+        "cancel": "Cancel"
+      }
     }
   },
   "productschedule": {
