--- a/src/app/translation/translations/en.json
+++ b/src/app/translation/translations/en.json
@@ -50,7 +50,7 @@
       "merchant": {
         "title": "Merchants",
         "merchantprovider": "Merchant Accounts",
-        "loadbalancer": "Merchant Groups"
+        "merchantprovidergroup": "Merchant Groups"
       },
       "providers": {
         "title": "3rd Party Providers",
@@ -974,7 +974,7 @@
       "title": "Product Schedules",
       "header": {
         "name": "Name",
-        "loadbalancer": "Merchant Provider Group",
+        "merchantprovidergroup": "Merchant Provider Group",
         "numofcycles": "Number of Cycles"
       }
     },
@@ -986,11 +986,11 @@
       "createtitle": "Create new Product Schedule",
       "title": "Product Schedule Details",
       "name": "Product Schedule Name",
-      "loadbalancer": "Merchant Provider Group",
+      "merchantprovidergroup": "Merchant Provider Group",
       "cancel": "CANCEL",
       "save": "SAVE",
       "edit": "Edit Product Schedule",
-      "viewloadbalancer": "View Merchant Provider Group"
+      "viewmerchantprovidergroup": "View Merchant Provider Group"
     },
     "cycle": {
       "addtitle": "Add Cycle",
@@ -1388,7 +1388,7 @@
       "title": "Associated Product Schedules",
       "nodata": "No Product Schedules found.",
       "name": "Name",
-      "loadbalancer": "Merchant Provider Group",
+      "merchantprovidergroup": "Merchant Provider Group",
       "count": "Number of cycles"
     },
     "transaction": {
@@ -1521,7 +1521,7 @@
       "validate": "VALIDATE"
     }
   },
-  "loadbalancer": {
+  "merchantprovidergroup": {
     "title": "Merchant Provider Group",
     "index": {
       "title": "Merchant Provider Groups",
@@ -1568,7 +1568,7 @@
     "tab": {
       "general": "GENERAL DETAILS",
       "processing": "PROCESSING",
-      "loadbalancer": "MERCHANT PROVIDER GROUPING"
+      "merchantprovidergroup": "MERCHANT PROVIDER GROUPING"
     },
     "info": {
       "edit": "EDIT MERCHANT PROVIDER",
@@ -1611,7 +1611,7 @@
         "description": "Description"
       }
     },
-    "loadbalancer": {
+    "merchantprovidergroup": {
       "title": "Associated Merchant Provider Groups",
       "view": "View Merchant Provider Group",
       "nodata": "No Merchant Provider Groups found.",
