--- a/src/app/translation/translations/en.json
+++ b/src/app/translation/translations/en.json
@@ -926,7 +926,9 @@
         "name": "Name",
         "description": "Description",
         "save": "SAVE",
-        "default": "Default Image"
+        "default": "Default Image",
+        "cancel": "CANCEL",
+        "nodata": "No Images Uploaded."
       }
     },
     "schedules": {
