Finish bulk/search/filter/columns

--- a/src/app/translation/translations/de.json
+++ b/src/app/translation/translations/de.json
@@ -219,6 +219,7 @@
   },
   "indexpage": {
     "filter": "Filter",
+    "search": "Suche",
     "del": "Löschen",
     "view": "Ansehen",
     "exp": "Exportieren",
