--- a/src/app/translation/translations/en.json
+++ b/src/app/translation/translations/en.json
@@ -219,6 +219,7 @@
   },
   "indexpage": {
     "filter": "Filter",
+    "search": "Search",
     "del": "Delete",
     "view": "View",
     "exp": "Export",
