--- a/src/app/translation/translations/hi.json
+++ b/src/app/translation/translations/hi.json
@@ -219,6 +219,7 @@
   },
   "indexpage": {
     "filter": "फ़िल्टर",
+    "search": "खोज",
     "del": "हटाएँ",
     "view": "दृश्य",
     "exp": "निर्यात",
