--- a/src/app/translation/translations/hy.json
+++ b/src/app/translation/translations/hy.json
@@ -219,6 +219,7 @@
 	},
 	"indexpage": {
 		"filter": "Զտիչ",
+    "search": "Որոնում",
 		"del": "Ջնջել",
 		"view": "Դիտել",
 		"exp": "Արտահանել",
